--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8">
 	<title>CSS Zen Garden: The Beauty of CSS Design</title>
 
-	<link rel="stylesheet" media="screen" href="/214/214.css?v=8may2013">
+	<link rel="stylesheet" media="screen" href="style.css?v=8may2013">
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.csszengarden.com/zengarden.xml">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -157,7 +157,7 @@
 				<h3 class="resources">Resources:</h3>
 				<ul>
 					<li class="view-css">
-						<a href="/214/214.css" title="View the source CSS file of the currently-viewed design.">
+						<a href="style.css" title="View the source CSS file of the currently-viewed design.">
 							View This Design&#8217;s <abbr title="Cascading Style Sheets">CSS</abbr>						</a>
 					</li>
 					<li class="css-resources">
